# tb6r5_policy_infer

./: .gitignore  README.md  pyproject.toml  requirements-jetson-torch.txt
tb6r5_policy_infer/: __init__.py  camera.py  cli.py  constants.py  deploy.py  eval.py  eval_cli.py  gripper.py  lerobot_compat.py  policy.py  runner.py
tb6r5_policy_infer/hardware/: __init__.py  base_camera.py  realsense.py  rpc_transport.py  sdk_paths.py  tb6r5.py  topic_feedback.py
tb6r5_policy_infer/vendor_py312/: README.md
tb6r5_policy_infer/vendor_py312/get_status_py/topic_all_py/: readme.txt  system_state_reader.py  topic_sub_snapshot.py
tb6r5_policy_infer/vendor_py312/get_status_py/topic_all_py/lib/arm/: README.md
tb6r5_policy_infer/vendor_py312/get_status_py/topic_all_py/lib/x86/: PENDING_PY312.md
tb6r5_policy_infer/vendor_py312/send_commend_py/rpc_py_all/lib/linux/x86/: PENDING_PY312.md
